# DDN

./: .env.docker  Dockerfile  Makefile  README.md  app.js  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg
ddn/: asgi.py  settings.py  wsgi.py
ddn/apps/core/: admin.py  mixins.py  models.py  urls.py  views.py
ddn/apps/core/migrations/: 0001_initial.py
ddn/apps/core/templates/core/: base.html  good.html  list_types.html  main.html
ddn/apps/core/templatetags/: core_tags.py
ddn/static/css/: style.css
